force-app/main/default/objects/ContentVersion/fields/AEM_Visibility__c.field-meta.xml
<CustomField>
    <fullName>AEM_Visibility__c</fullName>
    <label>AEM Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>