force-app/main/default/objects/ContentVersion/fields/HRCSVC_AEM_Email__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_AEM_Email__c</fullName>
    <label>AEM Email</label>
    <type>Email</type>
</CustomField>