force-app/main/default/objects/ContentVersion/fields/HRCSVC_AEM_First_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_AEM_First_Last_Name__c</fullName>
    <label>AEM First/Last Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>